Gets grid layout rendering correctly with card flip — still some minor issues with the inner spacing of each card

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -47,9 +47,15 @@ body {
 .flip .card .front {
   position: absolute;
   z-index: 1;
+  // height: 365px;
+  // width: 252px;
   // background: black;
     // color: white;
     cursor: pointer;
+}
+
+li {
+  background: #f3f3f3;
 }
 
 li.th {
